ADD : marquePages endpoint
